<resources>
    <string name="app_name" translatable="false">Examath</string>
    <string name="header_app_name" translatable="false">Examath v1.0</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="support">For support issues:</string>
    <string name="support_mail" translatable="false">scherbakov451@gmail.com</string>
    <string name="home">Home</string>
    <string name="first1">1 year 1 semester</string>
    <string name="first2">1 year 2 semester</string>
    <string name="second1">2 year 1 semester</string>
    <string name="second2">2 year 2 semester</string>
    <string name="first1_1">Мatrices and determinants</string>
    <string name="matrix_01">A matrix is a rectangular table of numbers containing m rows and n columns. The matrix is written in the form:</string>
    <string name="matrix_02">A matrix in which the number of rows is equal to the number of columns is called a square matrix of nth order.</string>
    <string name="matrix_03">Matrix elements whose column number is equal to rows (i = j) are called diagonal and form the main diagonal of the matrix.</string>
    <string name="matrix_04">A matrix containing one column or one row is called vector. Looks like:</string>
    <string name="matrix_05">TRANSPOSITION OPERATION</string>
    <string name="matrix_06">A matrix obtained from a given one by replacing each of its rows with a column with the same number is called a matrix transposed to the given one.</string>
    <string name="matrix_07">A transposed matrix has the following properties:</string>
    <string name="matrix_08">LINEAR OPERATIONS ON MATRICES</string>
    <string name="matrix_09">The sum of two matrices:</string>
    <string name="matrix_10">Multiplying two matrices:</string>
    <string name="matrix_11">The matrix −A = (−1) ⋅ A is called the opposite of matrix A.</string>
    <string name="matrix_12">The matrix difference A − B can be defined as A − B = A + (−B) .</string>
    <string name="matrix_13">Matrix operations have the following properties:</string>
    <string name="matrix_14">1. A + B = B + A;\n2. A + (B + C) = ( A + B) + C;\n3. A + O = A;\n4. A − A = O;\n5. 1 ⋅ A = A;\n6. α ⋅ (A + B) =α ⋅ A + α ⋅ B;\n7. (α + β) ⋅ A =α ⋅ A + β ⋅ A;\n8. α ⋅ (βA) = (αβ) ⋅ A\nwhere A,B,C are matrices, α,β are numbers.</string>
    <string name="matrix_15">ELEMENTARY TRANSFORMATIONS OF MATRICES</string>
    <string name="matrix_16">Elementary matrix transformations are:</string>
    <string name="matrix_17">• swapping two parallel rows of the matrix;</string>
    <string name="matrix_18">• multiplying all elements of a matrix row by a number other than zero;</string>
    <string name="matrix_19">• adding to all elements a number of corresponding elements parallel series multiplied by the same number.</string>
    <string name="matrix_20">Two matrices A and B are said to be equivalent if one of them is obtained from another using elementary transformations. A ~ B is written.</string>
    <string name="matrix_21">MATRIX MULTIPLICATION</string>
    <string name="matrix_22">The operation of multiplying two matrices is introduced only for the case when the number of columns of the first matrix is equal to the number of rows of the second matrix.</string>
    <string name="matrix_23">Matrices A and B are called commutative if A⋅B = B⋅A.</string>
    <string name="matrix_24">Matrix multiplication has the following properties:</string>
    <string name="matrix_25" translatable="false">1. A(BC) = ( AB)C;\n2. A(B + C) = AB + AC ;\n3. (A + B)C = AC + BC ;\n4. α(AB) = (αA)B = A(αВ)</string>
    <string name="matrix_26">DETERMINANTS</string>
    <string name="matrix_27">A square matrix A of order n can be associated with the number det A (or A, or Δ), called its determinant, as follows:</string>
    <string name="matrix_28">This is the triangle rule, and Sarrus\'s rule.\nScheme for calculating the second order determinant:</string>
    <string name="matrix_29">Scheme for calculating the third order determinant:</string>
    <string name="matrix_30">BASIC PROPERTIES OF DETERMINANTS</string>
    <string name="matrix_31">1. “Equality of rows and columns.” The determinant will not change if its rows are replaced by columns and vice versa (det A = det AT).\n2. When two adjacent rows are rearranged, the determinant changes sign.\n3. If in the determinant the row or column consists of zeros, then\nthe determinant is zero.\n4. A determinant having two equal series is equal to zero.\n5. The common factor of the elements of any series can be taken out of the sign of the determinant.\nFrom properties 3 and 4 it follows that if all elements of any series\nare proportional to the corresponding elements of the parallel series, then such a determinant is equal to zero.\n6. “Elementary transformations of the determinant.” The determinant will not change if the corresponding elements of the parallel series are added to the elements of one series, multiplied by\nany number.\n7. The determinant of diagonal and triangular matrices is equal to\nproduct of diagonal elements.</string>
    <string name="matrix_32">Minor of some element ij a of the nth order determinant is a determinant of n−1st order obtained from the original one by deleting the i-th row and j-th column.</string>
    <string name="matrix_33">LAPLACE THEOREM</string>
    <string name="matrix_34">the determinant of a square matrix is equal to the sum of the products of the elements of any row (column) by their algebraic complements:</string>
    <string name="matrix_35">INVERSE MATRIX</string>
    <string name="matrix_36">A square matrix A is called non-singular if its determinant is not equal to zero: Δ = det A ≠ 0. Otherwise, the matrix is called singular.</string>
    <string name="matrix_37">A matrix allied to matrix A is the matrix:</string>
    <string name="matrix_38">A matrix is called the inverse of a matrix if condition:</string>
    <string name="matrix_39">Every non-singular matrix has an inverse.</string>
    <string name="matrix_40">Algorithm for calculating the inverse matrices:</string>
    <string name="matrix_41">• Find the determinant of the original matrix. If A = 0, then the matrix is singular and A−1 does not exist. If A ≠ 0, then the matrix is non-singular and A−1 exists.\n• Find a matrix consisting of algebraic complements.\n• We transpose it and get the union matrix.\n• We divide each element of this matrix by its determinant.</string>
    <string name="matrix_42">MATRIX RANK</string>
    <string name="matrix_43">Consider a matrix A of size m×n. Let us select k lines and k\ncolumns ( k ≤ min(m;n) ). From elements at the intersection\nselected rows and columns, we compose a determinant of the kth order. All such determinants are called minors of this matrix.\nThe largest of the minor orders of a given matrix other than\nzero is called the rank of the matrix. Denoted by r,r ( A),rang A.\nFrom the definition it follows:\n• the rank of the matrix does not exceed the smaller of its dimensions, i.e.\nr ≤ min(m;n) ;\n• r ( A) = 0 if and only if all elements of the matrix are equal to zero, i.e. A=O;\n• for a square matrix of nth order r ( A) = n if and only\nthen, when the matrix A is non-singular.\nA minor whose order determines the rank of the matrix is called\nbasic. A matrix can have several basis minors.\nLet us note the properties of the matrix rank:\n1. When a matrix is transposed, its rank does not change.\n2. If you delete the zero row from the matrix, the rank of the matrix will not change.\n3. The rank of the matrix does not change during elementary matrix transformations.</string>
    <string name="matrix_44">LINEAR INDEPENDENCE OF MATRIX RANKS</string>
    <string name="matrix_45">The concept of matrix rank is closely related to the concept of linear independence of its rows or columns.\nConsider the following matrix:</string>
    <string name="matrix_46">In matrix A we denote its rows:</string>
    <string name="matrix_47">A string e is called a linear combination of strings e1,e2... if e = λ1е1 + λ2е2..., where λ are integers.</string>
    <string name="matrix_48">The rows of the matrix e are called linearly dependent if there are numbers λ that are not simultaneously equal to zero such that the linear combination of the rows is equal to the zero row 0 = (0,0,...,0) .</string>
    <string name="matrix_49">The linear dependence of the rows of the matrix means that although If one row of the matrix is a linear combination of the others.</string>
    <string name="matrix_50">If a linear combination of rows is equal to zero if and only if all coefficients are equal to zero, i.e. λ = 0, then the rows e are called linearly independent.</string>
    <string name="matrix_51">The rank of a matrix is equal to the maximum number of its linearly independent rows through which all its other rows are linearly expressed.</string>
    <string name="slau_1">Systems of lin.alg. equations</string>
    <string name="slau_2">System of m linear algebraic equations with n unknowns written in the form</string>
    <string name="slau_3">where a denotes the coefficient for unknown j in the ith equation of the system; x1, x2, etc. – unknown; numbers b are free terms.</string>
    <string name="slau_4">The table of coefficients for unknowns is called a matrix systems:</string>
    <string name="slau_5">Unknown members column:</string>
    <string name="slau_6">Column of free members:</string>
    <string name="slau_7">If m = n, then the determinant of the matrix A is most often denoted by Δ and is called the determinant of the system.\nA system of equations is called consistent if it has at least one solution, and inconsistent if it does not have any solution.\nA joint system is called definite if it has\na unique solution, and indeterminate if it has more than one solution. In the latter case, each of its solutions is called a particular solution of the system. The set of all particular solutions is called the general solution.\nSolving a system means finding out whether it is consistent or\nincompatible. If the system is consistent, find its general solution.\nTwo systems are called equivalent (equivalent) if they have the same general solution.\nA system of linear equations is called homogeneous if all free terms are equal to zero.</string>
    <string name="slau_8">METHODS FOR SOLVING SYSTEMS OF LINEAR ALGEBRAIC EQUATIONS</string>
    <string name="slau_9">MATRIX METHOD</string>
    <string name="slau_10">Let a system of n linear equations with n unknowns be given</string>
    <string name="slau_11">If the determinant of the system is different from zero, then the system is called non-degenerate.</string>
    <string name="slau_12">KRAMER FORMULAS</string>
    <string name="slau_13">Let\'s write the matrix solution in the form:</string>
    <string name="slau_14">It follows that:</string>
    <string name="slau_15">But the numerator of x1 is an expansion of the determinant:</string>
    <string name="vect_1">Vector algebra</string>
    <string name="lae_1">Elements of lin. algebra</string>
    <string name="ag_1">Analytic geometry</string>
    <string name="ags_1">An. geometry in space</string>
    <string name="f_1">Functions</string>
    <string name="pr_1">Derivatives</string>
    <string name="prlist_1">List of derivatives</string>
    <string name="in_1">Indefinite integral</string>
    <string name="indefinite_1">List of indefinites</string>
    <string name="de_1">Definite integral</string>
    <string name="ap_1">Applications of def. int.</string>
    <string name="ns_1">Number series</string>
    <string name="fs_1">Functional sequences and series</string>
    <string name="fmp_1">Functions of many variables</string>
    <string name="du_1">Differential equations</string>
    <string name="coming_soon">Coming soon...</string>
</resources>