<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:gravity="bottom"
    android:background="@color/tint_dark">
    <ImageView
        android:id="@+id/nav_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/nav_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/nav_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_app_name"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@id/nav_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/nav_image"
        />
    <TextView
        android:id="@+id/nav_sup"
        android:layout_width="wrap_content"
        android:textSize="17dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nav_image"
        app:layout_constraintTop_toBottomOf="@id/nav_ex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mail"
        android:text="@string/support"/>

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_mail"
        android:textColor="@color/my_primary"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@id/nav_ex"
        app:layout_constraintEnd_toEndOf="@id/nav_sup"
        app:layout_constraintTop_toBottomOf="@id/nav_sup"
        app:layout_constraintBottom_toBottomOf="@id/nav_image"/>
</androidx.constraintlayout.widget.ConstraintLayout>